# raportcivic_licenta

./: CMakeLists.txt  LICENSE  build.h  ca.pem  main.cpp  root_CMakeLists.txt
.github/: README.md
assets/data/: judete.json
assets/data/report_templates/: bollard_request.json  building_documents.json  car_park_sidewalk.json  green_space.json  street_dogs.json
assets/data/report_templates/reusable/: attachment.json  ending.json  introduction.json  l544_2001.json  location.json  og27.json
assets/icons/: app_icon.rc  logo.icns
component/: CMakeLists.txt  Component.cpp  Component.h  Def.h  QAccentColor.cpp  QAccentColor.h  QApp.cpp  QApp.h  QCaptcha.cpp  QCaptcha.h  QColors.cpp  QColors.h  QFrameless.cpp  QFrameless.h  QQrCodeItem.cpp  QQrCodeItem.h  QRectangle.cpp  QRectangle.h  QTableSortProxyModel.cpp  QTableSortProxyModel.h  QTextStyle.cpp  QTextStyle.h  QTheme.cpp  QTheme.h  QTools.cpp  QTools.h  QTreeModel.cpp  QTreeModel.h  QWatermark.cpp  QWatermark.h  component_en_US.qm  component_en_US.ts  component_ro_RO.ts  version_componentplugin.rc
component/.cmake/: version_dll.rc.in
component/Qt6/imports/Component/Controls/: QAcrylic.qml  QAppBar.qml  QAutoSuggestBox.qml  QBadge.qml  QBreadcrumbBar.qml  QButton.qml  QCalendarPicker.qml  QCarousel.qml  QCheckBox.qml  QClip.qml  QColorPicker.qml  QComboBox.qml  QContentDialog.qml  QContentPage.qml  QControl.qml  QControlBackground.qml  QCopyableText.qml  QDatePicker.qml  QDivider.qml  QDropDownButton.qml  QEvent.qml  QExpander.qml  QFilledButton.qml  QFlipView.qml  QFocusRectangle.qml  QFrame.qml  QGroupBox.qml  QIcon.qml  QIconButton.qml  QImage.qml  QImageButton.qml  QInfoBar.qml  QItemDelegate.qml  QLauncher.qml  QLoadingButton.qml  QMenu.qml  QMenuBar.qml  QMenuBarItem.qml  QMenuItem.qml  QMenuSeparator.qml  (+51 more)
component/qrcode/: qrspec.cpp
dev/: AppDmp.h  AppVersion.cpp  AppVersion.h  singleton.h  stdafx.h
dev/units/: CircularReveal.cpp  CircularReveal.h
dev/util/: AccountManager.cpp  AccountManager.h  AccountStorage.cpp  AccountStorage.h  DbManager.cpp  DbManager.h  ExifExtractor.cpp  ExifExtractor.h  FileReader.cpp  FileReader.h  JsonParser.cpp  JsonParser.h  Log.cpp  Log.h  NetworkCore.cpp  NetworkCore.h  PasswordHasher.cpp  PasswordHasher.h  PasswordValidator.cpp  PasswordValidator.h  ProfileValidator.cpp  ProfileValidator.h  QmlBridge.cpp  QmlBridge.h  ReportBridge.cpp  ReportBridge.h  ReportJsonManager.cpp  ReportJsonManager.h  SettingsHelper.cpp  SettingsHelper.h  TranslateHelper.cpp  TranslateHelper.h  UrlOpener.cpp  UrlOpener.h
doc/: db.txt
lang/: RaportCivic_en_US.qm  RaportCivic_en_US.ts  RaportCivic_ro_RO.ts
legal/: assets.txt  qml-unit-mit.txt
libs/libsodium/: CMakeLists.txt
qml/: App.qml
qml/board/: ItemsBase.qml  ItemsMain.qml  SharedState.qml  qmldir
qml/pane/: About.qml  AccountContent.qml  AccountLogin.qml  AccountRegister.qml  Crash.qml  Licenses.qml  PageLayer.qml  PaneBackend.qml
qml/screen/: 544Guide.qml  CaseGuide.qml  CivicalGuide.qml  Home.qml  ReportData.qml  ReportDetails.qml  ReportDisplay.qml  ReportInput.qml  ReportManager.qml  ReportSelection.qml  Settings.qml  UserManagement.qml
